// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`route item should add and remove route 1`] = `
<div>
  <div
    class="routeRoam"
  >
    <div>
      <button
        type="button"
      >
        生成路径
      </button>
    </div>
    <div
      class="routeListTitle"
    >
      <div>
        路径列表：
      </div>
      <div
        class="importBtn"
        role="button"
        tabindex="0"
      >
        <img
          alt="import"
          src="import.png"
        />
        导入
      </div>
    </div>
    <div
      class="routeList"
    >
      <div
        class=""
        role="dialog"
      >
        <div
          class="routeItem"
        >
          <div
            class="row1"
          >
            <div
              class="name"
              role="presentation"
            >
              <span
                class="nameDisplay"
                title="漫游路径"
              >
                漫游路径
              </span>
              <img
                alt="rename"
                src="rename.png"
                title="重命名"
              />
            </div>
            <div>
              <img
                alt="播放"
                src="play.png"
                title="播放"
              />
              <img
                alt="删除"
                src="remove.png"
                title="删除"
              />
              <img
                alt="导出"
                src="export.png"
                title="导出"
              />
            </div>
          </div>
          <div
            class="row2"
          >
            <div
              class="container"
            >
              <div
                class="minButton "
                role="button"
                tabindex="0"
              >
                -
              </div>
              <div
                class="number"
              >
                1
              </div>
              <div
                class="maxButton "
                role="button"
                tabindex="0"
              >
                +
              </div>
            </div>
            <span>
              00:00:00
            </span>
            <div
              class="container"
              role="presentation"
            >
              <div
                class="rail"
              />
              <div
                class="track"
                style="width: 0%;"
              />
              <div
                class="step"
                style="left: 0%;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`route item should add and remove route 2`] = `
<div>
  <div
    class="routeRoam"
  >
    <div>
      <button
        type="button"
      >
        生成路径
      </button>
    </div>
    <div
      class="routeListTitle"
    >
      <div>
        路径列表：
      </div>
      <div
        class="importBtn"
        role="button"
        tabindex="0"
      >
        <img
          alt="import"
          src="import.png"
        />
        导入
      </div>
    </div>
    <div
      class="routeList"
    />
  </div>
</div>
`;

exports[`route item should highlight item 1`] = `
<div>
  <div
    class="routeRoam"
  >
    <div>
      <button
        type="button"
      >
        生成路径
      </button>
    </div>
    <div
      class="routeListTitle"
    >
      <div>
        路径列表：
      </div>
      <div
        class="importBtn"
        role="button"
        tabindex="0"
      >
        <img
          alt="import"
          src="import.png"
        />
        导入
      </div>
    </div>
    <div
      class="routeList"
    >
      <div
        class="selectedItem"
        role="dialog"
      >
        <div
          class="routeItem"
        >
          <div
            class="row1"
          >
            <div
              class="name"
              role="presentation"
            >
              <span
                class="nameDisplay"
                title="漫游路径"
              >
                漫游路径
              </span>
              <img
                alt="rename"
                src="rename.png"
                title="重命名"
              />
            </div>
            <div>
              <img
                alt="播放"
                src="play.png"
                title="播放"
              />
              <img
                alt="删除"
                src="remove.png"
                title="删除"
              />
              <img
                alt="导出"
                src="export.png"
                title="导出"
              />
            </div>
          </div>
          <div
            class="row2"
          >
            <div
              class="container"
            >
              <div
                class="minButton "
                role="button"
                tabindex="0"
              >
                -
              </div>
              <div
                class="number"
              >
                1
              </div>
              <div
                class="maxButton "
                role="button"
                tabindex="0"
              >
                +
              </div>
            </div>
            <span>
              00:00:00
            </span>
            <div
              class="container"
              role="presentation"
            >
              <div
                class="rail"
              />
              <div
                class="track"
                style="width: 0%;"
              />
              <div
                class="step"
                style="left: 0%;"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="selectedItem"
        role="dialog"
      >
        <div
          class="routeItem"
        >
          <div
            class="row1"
          >
            <div
              class="name"
              role="presentation"
            >
              <span
                class="nameDisplay"
                title="漫游路径"
              >
                漫游路径
              </span>
              <img
                alt="rename"
                src="rename.png"
                title="重命名"
              />
            </div>
            <div>
              <img
                alt="播放"
                src="play.png"
                title="播放"
              />
              <img
                alt="删除"
                src="remove.png"
                title="删除"
              />
              <img
                alt="导出"
                src="export.png"
                title="导出"
              />
            </div>
          </div>
          <div
            class="row2"
          >
            <div
              class="container"
            >
              <div
                class="minButton "
                role="button"
                tabindex="0"
              >
                -
              </div>
              <div
                class="number"
              >
                1
              </div>
              <div
                class="maxButton "
                role="button"
                tabindex="0"
              >
                +
              </div>
            </div>
            <span>
              00:00:00
            </span>
            <div
              class="container"
              role="presentation"
            >
              <div
                class="rail"
              />
              <div
                class="track"
                style="width: 0%;"
              />
              <div
                class="step"
                style="left: 0%;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`route item should highlight item 2`] = `
<div>
  <div
    class="routeRoam"
  >
    <div>
      <button
        type="button"
      >
        生成路径
      </button>
    </div>
    <div
      class="routeListTitle"
    >
      <div>
        路径列表：
      </div>
      <div
        class="importBtn"
        role="button"
        tabindex="0"
      >
        <img
          alt="import"
          src="import.png"
        />
        导入
      </div>
    </div>
    <div
      class="routeList"
    >
      <div
        class="selectedItem"
        role="dialog"
      >
        <div
          class="routeItem"
        >
          <div
            class="row1"
          >
            <div
              class="name"
              role="presentation"
            >
              <span
                class="nameDisplay"
                title="漫游路径"
              >
                漫游路径
              </span>
              <img
                alt="rename"
                src="rename.png"
                title="重命名"
              />
            </div>
            <div>
              <img
                alt="播放"
                src="play.png"
                title="播放"
              />
              <img
                alt="删除"
                src="remove.png"
                title="删除"
              />
              <img
                alt="导出"
                src="export.png"
                title="导出"
              />
            </div>
          </div>
          <div
            class="row2"
          >
            <div
              class="container"
            >
              <div
                class="minButton "
                role="button"
                tabindex="0"
              >
                -
              </div>
              <div
                class="number"
              >
                1
              </div>
              <div
                class="maxButton "
                role="button"
                tabindex="0"
              >
                +
              </div>
            </div>
            <span>
              00:00:00
            </span>
            <div
              class="container"
              role="presentation"
            >
              <div
                class="rail"
              />
              <div
                class="track"
                style="width: 0%;"
              />
              <div
                class="step"
                style="left: 0%;"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="selectedItem"
        role="dialog"
      >
        <div
          class="routeItem"
        >
          <div
            class="row1"
          >
            <div
              class="name"
              role="presentation"
            >
              <span
                class="nameDisplay"
                title="漫游路径"
              >
                漫游路径
              </span>
              <img
                alt="rename"
                src="rename.png"
                title="重命名"
              />
            </div>
            <div>
              <img
                alt="播放"
                src="play.png"
                title="播放"
              />
              <img
                alt="删除"
                src="remove.png"
                title="删除"
              />
              <img
                alt="导出"
                src="export.png"
                title="导出"
              />
            </div>
          </div>
          <div
            class="row2"
          >
            <div
              class="container"
            >
              <div
                class="minButton "
                role="button"
                tabindex="0"
              >
                -
              </div>
              <div
                class="number"
              >
                1
              </div>
              <div
                class="maxButton "
                role="button"
                tabindex="0"
              >
                +
              </div>
            </div>
            <span>
              00:00:00
            </span>
            <div
              class="container"
              role="presentation"
            >
              <div
                class="rail"
              />
              <div
                class="track"
                style="width: 0%;"
              />
              <div
                class="step"
                style="left: 0%;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
